kubernetes/services/legacy-web/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: legacy-web
  annotations:
    hub.radunenu.com/description: The old APIs and kronorite.com
