kubernetes/services/legacy-web/kronorite-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kronorite
  namespace: legacy-web
spec:
  selector:
    app: kronorite
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
